--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    
+    <h1>Etch a Sketch</h1>
+    <div class="container">
+      <div class="controls">
+        <div class="controls-inner">
+          <h3>Control</h3>
+          <div class="grid-size">8x8</div>
+          <input type="range" min="2" max="30" value="8">
+          <button class="apply">Apply</button>
+          <button class="reset">Reset</button>
+        </div>
+      </div>
+      <div class="grid"></div>
+    </div>
+
     <script src="./script.js" async defer></script>
   </body>
 </html>
