--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <div class="controls">
         <div class="controls-inner">
-          <h3>Control</h3>
+          <h3>Controls</h3>
           <div class="grid-size">8x8</div>
           <input type="range" min="2" max="30" value="8">
           <button class="apply">Apply</button>
