--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
         <div class="controls-inner">
           <h3>Controls</h3>
           <div class="grid-size">8x8</div>
-          <input type="range" min="2" max="30" value="8">
+          <input class="range" type="range" min="2" max="30" value="8">
+          <div class="checkbox">
+            <input type="checkbox" id="rainbow">
+            <label for="rainbow">Rainbow</label>
+          </div>
           <button class="apply">Apply</button>
           <button class="reset">Reset</button>
         </div>
