Fix incorrect classes

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
           <h3>Controls</h3>
           <div class="grid-size">8x8</div>
           <input class="range" type="range" min="2" max="30" value="8">
-          <div class="checkbox">
-            <input type="checkbox" id="rainbow">
+          <div class="rainbow">
+            <input class="checkbox" type="checkbox" id="rainbow">
             <label for="rainbow">Rainbow</label>
           </div>
           <button class="apply">Apply</button>
