--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
       <div class="grid"></div>
     </div>
 
-    <script src="./script.js" async defer></script>
+    <script src="./script.js"></script>
   </body>
 </html>
